package org.paul.flightapi;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class FlightApiApplication {
    public static void main(String[] args) {
        SpringApplication.run(FlightApiApplication.class, args);
    }
}
